fixed z-index boxes

--- a/src/scss/pages/_flowpage.scss
+++ b/src/scss/pages/_flowpage.scss
@@ -42,6 +42,7 @@
         .selected {
             border: 2px solid blue;
             position: absolute;
+            z-index: 100;
         }
         
         #panel {
